started work on page firstEnter

--- a/projekt4/src/index.css
+++ b/projekt4/src/index.css
@@ -1,8 +1,7 @@
-.contaner{
+.container{
     border: 1px solid black;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     height: 100vh;
 }
