--- a/projekt4/src/index.css
+++ b/projekt4/src/index.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh-10px);
 }
 
 .phoneInputStyle{
