--- a/projekt4/src/firstEnter/FirstEnter.css
+++ b/projekt4/src/firstEnter/FirstEnter.css
@@ -7,11 +7,10 @@
     max-height: 600px;
     
     overflow-y: scroll;
-}
-.acountIntrests::-webkit-scrollbar {
+}.acountIntrests::-webkit-scrollbar {
        width: 1em; 
 }::-webkit-scrollbar-track {
-    background: rgb(97, 207, 114);
+    background: rgb(255, 255, 255);
     border-radius: 100vw;
     margin-block: .5em;
 }::-webkit-scrollbar-thumb {
